--- a/index.html
+++ b/index.html
@@ -1,11 +1,5 @@
 <!DOCTYPE HTML>
-<html>
-  <head>
-    <title>CorpCap L.P.</title>
-  </head>
-  <body bgcolor=white>
-    <center>CORPCAP</center>
-    <b>
-      <center> mailto:info@corpcapvc.com</center>
-  </body>
-</html>
+<title>CorpCap L.P.</title>
+<p style="text-align: center; font:small-caps 32px Georgia, serif">CORPCAP</p>
+<center> mailto:info@corpcapvc.com</center>
+<p style="font:caption">The browser font used in captioned controls.</p>
