--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE HTML>
 <title>CorpCap L.P.</title>
 <p style="text-align: center; font:small-caps 32px Georgia, serif">CORPCAP</p>
-<center> mailto:info@corpcapvc.com</center>
-<p style="font:caption">The browser font used in captioned controls.</p>
+<p style="text-align: center; font:12px Georgia, serif"><a href="mailto:info@corpcapvc.com">info@corpcapvc.com</a></p>
