--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE HTML>
 <title>CorpCap L.P.</title>
 <p style="text-align: center; font:small-caps 32px Georgia, serif">CORPCAP</p>
-<p style="text-align: center; font:12px Georgia, serif"><a href="mailto:info@corpcapvc.com">info@corpcapvc.com</a></p>
+<p style="text-align: center; font:12px Georgia, serif; text-decoration: none;">
+  <a href="mailto:info@corpcapvc.com">info@corpcapvc.com</a>
+</p>
