--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <title>CorpCap L.P.</title>
 <p style="text-align: center; font:small-caps 32px Georgia, serif">CORPCAP</p>
-<p style="text-align: center; font:12px Georgia, serif; text-decoration: none;">
-  <a href="mailto:info@corpcapvc.com">info@corpcapvc.com</a>
+<p style="text-align: center; font:12px Georgia, serif">
+  <a style="text-decoration: none" href="mailto:info@corpcapvc.com">info@corpcapvc.com</a>
 </p>
