--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <title>CorpCap L.P.</title>
-<p style="text-align: center; font:small-caps 32px Georgia, serif">CORPCAP</p>
+<p  margin-top: 300px; style="text-align: center; font:small-caps 48px Georgia, serif">CORPCAP</p>
+<p style="text-align: center; font:small-caps 48px Georgia, serif">CORPCAP</p>
 <p style="text-align: center; font:12px Georgia, serif">
   <a style="text-decoration: none" href="mailto:info@corpcapvc.com">info@corpcapvc.com</a>
 </p>
